--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
